<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            style="@style/CovidStopImageViewLogoStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLogin"
            style="@style/LoginRegisterLogoTextViewStyle"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUserNameTitle"
            style="@style/LoginRegisterTextViewStyle"
            android:text="@string/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            style="@style/LoginRegisterEditTextStyle"
            android:hint="@string/enter_your_username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserNameTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPasswordTitle"
            style="@style/LoginRegisterTextViewStyle"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            style="@style/LoginRegisterEditTextStyle"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordTitle" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chkRememberPassword"
            style="@style/MaterialCheckBoxStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LoginRegisterCBTexView"
            android:text="@string/remember_password"
            app:layout_constraintBottom_toBottomOf="@+id/chkRememberPassword"
            app:layout_constraintStart_toEndOf="@+id/chkRememberPassword"
            app:layout_constraintTop_toTopOf="@+id/chkRememberPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/MaterialButtonStyle"
            android:text="@string/login"
            app:backgroundTint="@null"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintEnd_toStartOf="@+id/btnForgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkRememberPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnLogin"
            app:layout_constraintTop_toTopOf="@+id/btnLogin" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@color/colorTransparentBlack50"
            app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOrLoginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/or_login_with"
            android:textAllCaps="true"
            android:textColor="@color/colorLightGreen"
            app:layout_constraintBottom_toBottomOf="@+id/divider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgFacebook"
            style="@style/SocialMediaImageViewStyle"
            android:layout_marginStart="@dimen/_16sdp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toStartOf="@+id/imgTwitter"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTwitter"
            style="@style/SocialMediaImageViewStyle"
            android:src="@drawable/ic_twitter"
            app:layout_constraintEnd_toStartOf="@+id/imgGoogle"
            app:layout_constraintStart_toEndOf="@+id/imgFacebook"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgGoogle"
            style="@style/SocialMediaImageViewStyle"
            android:src="@drawable/ic_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTwitter"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/dont_have_account"
            android:textAllCaps="true"
            android:textColor="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFacebook" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/register"
            android:textAppearance="@style/ButtonTextAppearance"
            android:textColor="@color/colorRed"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDontHaveAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>