<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_welcome_screen_bg_svg"
        tools:context=".activity.WelcomeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_42sdp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/welcome_line_1"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/welcome_line_2"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_38sdp"
            android:background="@drawable/ic_welcome_screen_text_bg_svg"
            android:paddingStart="@dimen/_32sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome2"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtShareYour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/share_your"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCorrectSign1"
                style="@style/WelcomeCheckImageViewStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtShareYour" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTestResult"
                style="@style/WelcomeCheckTextViewStyle"
                android:text="@string/test_results"
                app:layout_constraintStart_toEndOf="@+id/imgCorrectSign1"
                app:layout_constraintTop_toTopOf="@+id/imgCorrectSign1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCorrectSign2"
                style="@style/WelcomeCheckImageViewStyle"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCorrectSign1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtVaccineHistory"
                style="@style/WelcomeCheckTextViewStyle"
                android:text="@string/vaccine_history"
                app:layout_constraintStart_toEndOf="@+id/imgCorrectSign2"
                app:layout_constraintTop_toTopOf="@+id/imgCorrectSign2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWelcome3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/welcome_line_3"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCorrectSign2" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/colorGrayText"
                app:layout_constraintEnd_toEndOf="@+id/txtWelcome3"
                app:layout_constraintStart_toStartOf="@+id/txtWelcome3"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcome3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgSafe4"
                style="@style/Safe4ImageViewStyle"
                android:src="@drawable/img_welcome_safe_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGetStarted"
                style="@style/MaterialButtonStyle"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:text="@string/get_started"
                app:backgroundTint="@null"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/divider1"
                app:layout_constraintStart_toStartOf="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/imgSafe4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>